discord-frontend/hartex-discord-commands-test/tests/ui/unexpected_parameter_name.stderr
error: unexpected parameter name: `unexpected_parameter_name`
  --> tests/ui/unexpected_parameter_name.rs:26:12
   |
26 | #[metadata(unexpected_parameter_name = "unexpected_parameter_name")]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: valid parameter names: `command_type`, `description`, `interaction_only`, `name`
